--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.1",
+    "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.3",
-    "helmet": "^4.3.1",
+    "helmet": "^4.4.1",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "mongoose-unique-validator": "^2.0.3",
