--- a/package.json
+++ b/package.json
@@ -40,7 +40,5 @@
     "ussd-menu-builder": "^1.2.0",
     "xss-clean": "^0.1.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+  "devDependencies": {}
 }
