--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node src/index.js",
     "start-watch": "nodemon src/index.js"
   },
+  "engines": {
+    "node": "6.11.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://harmonizer@bitbucket.org/alias_solutions/aslan-ussd-api.git"
