--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "All Ussd integratin to Aslan portal",
   "main": "src/app.js",
   "engines": {
-    "node": "6.11.1"
+    "node": "6.11.x"
   },
   "scripts": {
     "test": "test",
