--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "test",
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
     "start-node": "node src/index.js",
     "start-watch": "nodemon src/index.js"
   },
