added new customer endpoints

--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   "homepage": "https://bitbucket.org/alias_solutions/aslan-ussd-api#readme",
   "dependencies": {
     "@pm2/io": "^5.0.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.3",
+    "form-data": "^4.0.0",
+    "formidable": "^1.2.2",
     "generate-serial-number": "0.0.3",
     "helmet": "^4.4.1",
     "http": "0.0.1-security",
