Done with member info, create member and card payment for ppt diaspora Added validatorjs npm package

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "socket.io": "^3.0.5",
     "unirest": "^0.6.0",
     "ussd-builder": "^1.1.1",
+    "validatorjs": "^3.22.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
