--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "socket.io": "^3.0.5",
     "swagger-ui-express": "^4.1.6",
     "unirest": "^0.6.0",
-    "ussd-builder": "^1.2.4-beta.1",
+    "ussd-builder": "^1.3.2",
     "validatorjs": "^3.22.1",
     "xss-clean": "^0.1.1"
   },
